moved superuser instance to activity instead of creating it in fragments